--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <nav
+    <!-- <nav
       class="sm:px-24 px-16 w-full flex items-center py-10 absolute left-0 right-0 top-0 z-20"
     >
       <img
@@ -102,7 +102,7 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </nav> -->
 
     <section class="home mx-auto" id="home">
       <div
