Fixig Contact Section

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       id="about"
     >
       <div
-        class="title-container about-title xs:w-1/2 lg:w-1/3 flex justify-end px-8 rounded-r-[20px] shadow-card bg-secondary absolute left-0 lg:-left-[10%]"
+        class="title-container about-title xs:w-[60%] lg:w-1/3 flex justify-end px-8 rounded-r-[20px] shadow-card bg-secondary absolute left-0 lg:-left-[10%]"
       >
         <h1
           class="about-title font-title md:text-[110px] sm:text-[90px] xs:text-[70px] text-[30px] tracking-[1.5px] text-primary"
@@ -295,7 +295,7 @@
       id="projects"
     >
       <div
-        class="title-container project-title xs:w-1/2 lg:w-1/3 flex justify-end px-8 rounded-r-[20px] shadow-card bg-secondary absolute left-0 lg:-left-[10%]"
+        class="title-container project-title xs:w-[60%] lg:w-1/3 flex justify-end px-8 rounded-r-[20px] shadow-card bg-secondary absolute left-0 lg:-left-[10%]"
       >
         <h1
           class="project-title font-title md:text-[110px] sm:text-[90px] xs:text-[70px] text-[30px] tracking-[1.5px] text-primary project-title"
@@ -484,16 +484,16 @@
       id="contact"
     >
       <div
-        class="title-container contact-title title-container project-title xs:w-1/2 lg:w-1/3 flex justify-end px-8 rounded-r-[20px] shadow-card bg-secondary absolute left-0 lg:-left-[10%]"
+        class="contact-title title-container xs:w-[70%] lg:w-1/3 flex justify-end px-8 rounded-r-[20px] shadow-card bg-secondary absolute left-0 lg:-left-[10%]"
       >
         <h1
-          class="contact-title about-title font-title md:text-[110px] sm:text-[90px] xs:text-[70px] text-[30px] tracking-[1.5px] text-primary project-title"
+          class="contact-title font-title md:text-[110px] sm:text-[90px] xs:text-[70px] text-[30px] tracking-[1.5px] text-primary"
         >
           Contact
         </h1>
       </div>
       <div
-        class="contact-container lg:mt-[300px] mt-56 flex gap-5 justify-center items-center"
+        class="contact-container lg:mt-[300px] mt-10 flex gap-5 justify-center items-center h-[80vh]"
       >
         <div class="flex flex-col justify-center items-center gap-[4rem] z-10">
           <div class="flex flex-col items-center">
