Fixing Media Queries on Home Titles

--- a/index.html
+++ b/index.html
@@ -117,19 +117,13 @@
             I am
           </h1>
 
-          <h1
-            class="z-10 hero-title md:text-[150px] tablet:text-[125px] sm:text-[85px] xs:text-[70px] text-primary font-title m-0 leading-0"
-          >
+          <h1 class="z-10 hero-title text-primary font-title m-0 leading-0">
             Jabid Jimenez
           </h1>
-          <h1
-            class="z-10 hero-title md:text-[150px] tablet:text-[125px] sm:text-[85px] xs:text-[70px] text-primary font-title m-0 leading-0"
-          >
+          <h1 class="z-10 hero-title text-primary font-title m-0 leading-0">
             Web Designer
           </h1>
-          <h1
-            class="z-10 hero-title md:text-[150px] tablet:text-[125px] sm:text-[85px] xs:text-[70px] text-primary font-title m-0 leading-0"
-          >
+          <h1 class="z-10 hero-title text-primary font-title m-0 leading-0">
             Web Developer
           </h1>
 
