Adding Mock-up imgs to works section

--- a/index.html
+++ b/index.html
@@ -175,6 +175,12 @@
               Web Design
             </p>
           </div>
+          <img
+            src="/img/profile-img.png
+              "
+            alt="home--image"
+            class="w-full h-full bg-cover absolute inset-0 top-0 right-0 max-w-none"
+          />
 
           <div class="home-cards bg-secondary" id="card-development">
             <i
@@ -310,7 +316,7 @@
                 <h1
                   class="text-primary sm:text-[30px] text-center tracking-[1.5px]"
                 >
-                  Portfolio
+                  Shoe Customizer
                 </h1>
                 <p
                   class="font-body md:text-[20.8px] text-center p-5 text-tertiary"
@@ -337,10 +343,9 @@
                 </div>
               </div>
               <img
-                src="https://picsum.photos/id/5/700
-                    "
+                src="/img/mock-up-shoe-cust.png"
                 alt="slider--image"
-                class="slider-img w-[200%] h-full bg-cover absolute inset-0 top-0 right-0 max-w-none"
+                class="slider-img w-[150%] h-full bg-cover absolute inset-0 top-0 right-0 max-w-none"
               />
             </div>
           </li>
@@ -352,7 +357,7 @@
                 <h1
                   class="text-primary sm:text-[30px] text-center tracking-[1.5px]"
                 >
-                  Portfolio
+                  Waves
                 </h1>
                 <p
                   class="font-body md:text-[20.8px] text-center p-5 text-tertiary"
@@ -379,10 +384,10 @@
                 </div>
               </div>
               <img
-                src="https://picsum.photos/id/0/700
+                src="/img/mock-up-wave-project.png
                     "
                 alt="slider--image"
-                class="slider-img w-[200%] h-full bg-cover absolute inset-0 top-0 right-0 max-w-none"
+                class="slider-img w-[150%] h-full bg-cover absolute inset-0 top-0 right-0 max-w-none"
               />
             </div>
           </li>
@@ -394,7 +399,7 @@
                 <h1
                   class="text-primary sm:text-[30px] text-center tracking-[1.5px]"
                 >
-                  Portfolio
+                  My Portfolio
                 </h1>
                 <p
                   class="font-body md:text-[20.8px] text-center p-5 text-tertiary"
@@ -421,10 +426,10 @@
                 </div>
               </div>
               <img
-                src="https://picsum.photos/id/2/700
+                src="/img/portfolio-project.png
                     "
                 alt="slider--image"
-                class="slider-img w-[200%] h-full bg-cover absolute inset-0 top-0 right-0 max-w-none"
+                class="slider-img w-[150%] h-full bg-cover absolute inset-0 top-0 right-0 max-w-none"
               />
             </div>
           </li>
