fixing spaces on img elements

--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
             </p>
           </div>
           <img
-            src="/img/profile-img.png
-              "
+            src="/img/profile-img.png"
             alt="home--image"
             class="w-full h-full bg-cover absolute inset-0 top-0 right-0 max-w-none"
           />
@@ -384,8 +383,7 @@
                 </div>
               </div>
               <img
-                src="/img/mock-up-wave-project.png
-                    "
+                src="/img/mock-up-wave-project.png"
                 alt="slider--image"
                 class="slider-img w-[150%] h-full bg-cover absolute inset-0 top-0 right-0 max-w-none"
               />
@@ -426,8 +424,7 @@
                 </div>
               </div>
               <img
-                src="/img/portfolio-project.png
-                    "
+                src="/img/mock-up-shoe-cust.png"
                 alt="slider--image"
                 class="slider-img w-[150%] h-full bg-cover absolute inset-0 top-0 right-0 max-w-none"
               />
