deploy: 4daae3093ae7cf231cb457f21a32135f5fe0cecd

--- a/index.html
+++ b/index.html
@@ -178,8 +178,7 @@
             </p>
           </div>
           <img
-            src="/img/profile-img.png
-              "
+            src="/jabid-portfolio-vite/img/profile-img.png"
             alt="home--image"
             class="w-full h-full bg-cover absolute inset-0 top-0 right-0 max-w-none"
           />
@@ -386,8 +385,7 @@
                 </div>
               </div>
               <img
-                src="/img/mock-up-wave-project.png
-                    "
+                src="/jabid-portfolio-vite/img/mock-up-wave-project.png"
                 alt="slider--image"
                 class="slider-img w-[150%] h-full bg-cover absolute inset-0 top-0 right-0 max-w-none"
               />
@@ -428,8 +426,7 @@
                 </div>
               </div>
               <img
-                src="/img/portfolio-project.png
-                    "
+                src="/jabid-portfolio-vite/img/mock-up-shoe-cust.png"
                 alt="slider--image"
                 class="slider-img w-[150%] h-full bg-cover absolute inset-0 top-0 right-0 max-w-none"
               />
