Fixibg My Portfolio Links

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 </div>
               </div>
               <img
-                src="/img/mock-up-shoe-cust.png"
+                src="/img/portfolio-project.png"
                 alt="slider--image"
                 class="slider-img w-[150%] h-full bg-cover absolute inset-0 top-0 right-0 max-w-none"
               />
