Adding description to the projects

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body class="overflow-x-hidden relative z-0 bg-body-color" id="body">
     <div id="myThreeJsCanvas" class="fixed top-0 bottom-0 left-0 right-0"></div>
-    <div class="blocks w-screen h-screen fixed z-20">
+    <!-- <div class="blocks w-screen h-screen fixed z-20">
       <div
         class="bg-nav-bg w-screen h-1/2 grid items-end justify-center block-top top-0 overflow-hidden"
       >
@@ -31,7 +31,7 @@
           <div class="loader absolute w-0 h-full bg-body-color"></div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- <nav
       class="sm:px-24 px-16 w-full flex items-center py-10 absolute left-0 right-0 top-0 z-20"
@@ -318,26 +318,37 @@
                   Shoe Customizer
                 </h1>
                 <p
-                  class="font-body md:text-[20.8px] text-center p-5 text-tertiary"
+                  class="font-body md:text-[18.8px] text-center p-5 text-tertiary"
                 >
-                  Design and Development
-                </p>
-                <div class="flex flex-col justify-center items-center gap-5">
-                  <a
-                    href="#"
-                    target="_blank"
-                    class="project__button text-tertiary"
+                  3D shoe customizer created using
+                  <span class="text-primary font-body font-bold"
+                    >React Three</span
                   >
-                    Visit site
-                    <i class="ri-arrow-right-line articles__icon"></i>
+                  ,
+                  <span class="text-primary font-body font-bold">React</span>
+                  ,<span class="text-primary font-body font-bold"
+                    >Tailwind
+                  </span>
+                  and
+                  <span class="text-primary font-body font-bold"
+                    >Framer Motion</span
+                  >. This platform allow you to personalize a shoe. Just click
+                  any part of the shoe and customize it.
+                </p>
+                <div class="flex justify-center items-center gap-5">
+                  <a
+                    href="https://jimjabid.github.io/3DShoeCustomizer/"
+                    target="_blank"
+                    class="text-primary font-medium underline md:text-[30px] xs:text-[25px] text-[15px]"
+                  >
+                    <i class="ri-global-line"></i>
                   </a>
                   <a
-                    href="#"
+                    href="https://github.com/jimjabid/3DShoeCustomizer"
                     target="_blank"
-                    class="project__button text-tertiary"
+                    class="text-primary font-medium underline md:text-[30px] xs:text-[25px] text-[15px]"
                   >
-                    Visit figma
-                    <i class="ri-arrow-right-line articles__icon"></i>
+                    <i class="ri-file-code-line"></i>
                   </a>
                 </div>
               </div>
@@ -359,26 +370,34 @@
                   Waves
                 </h1>
                 <p
-                  class="font-body md:text-[20.8px] text-center p-5 text-tertiary"
+                  class="font-body md:text-[18.8px] text-center p-5 text-tertiary"
                 >
-                  Design and Development
+                  Explore top surf photographers in this showcase website
+                  Merging
+                  <span class="text-primary font-body font-bold">WebGl</span>
+                  world with
+                  <span class="text-primary font-body font-bold">HTML</span> ,
+                  <span class="text-primary font-body font-bold">CSS</span>
+                  ,<span class="text-primary font-body font-bold"
+                    >Three.js </span
+                  >,
+                  <span class="text-primary font-body font-bold"> GSAP</span>
+                  and shaders for image effects.
                 </p>
-                <div class="flex flex-col justify-center items-center gap-5">
+                <div class="flex justify-center items-center gap-5">
                   <a
-                    href="#"
+                    href="https://jimjabid.github.io/the-wave-project-v1/"
                     target="_blank"
-                    class="project__button text-tertiary"
+                    class="text-primary font-medium underline md:text-[30px] xs:text-[25px] text-[15px]"
                   >
-                    Visit site
-                    <i class="ri-arrow-right-line articles__icon"></i>
+                    <i class="ri-global-line"></i>
                   </a>
                   <a
-                    href="#"
+                    href="https://github.com/jimjabid/the-wave-project-v1"
                     target="_blank"
-                    class="project__button text-tertiary"
+                    class="text-primary font-medium underline md:text-[30px] xs:text-[25px] text-[15px]"
                   >
-                    Visit figma
-                    <i class="ri-arrow-right-line articles__icon"></i>
+                    <i class="ri-file-code-line"></i>
                   </a>
                 </div>
               </div>
@@ -400,26 +419,36 @@
                   My Portfolio
                 </h1>
                 <p
-                  class="font-body md:text-[20.8px] text-center p-5 text-tertiary"
+                  class="font-body md:text-[18.8px] text-center p-5 text-tertiary"
                 >
-                  Design and Development
+                  This is the same portfolio website you are reading this from:
+                  a fusion of
+                  <span class="text-primary font-body font-bold">Tailwind</span>
+                  ,
+
+                  <span class="text-primary font-body font-bold"> shaders</span>
+                  ,
+                  <span class="text-primary font-body font-bold"
+                    >Three.js
+                  </span>
+                  and
+                  <span class="text-primary font-body font-bold"> GSAP</span>. I
+                  hope you like it so far.
                 </p>
-                <div class="flex flex-col justify-center items-center gap-5">
+                <div class="flex justify-center items-center gap-5">
                   <a
-                    href="#"
+                    href="https://jimjabid.github.io/jabid-portfolio-vite/"
                     target="_blank"
-                    class="project__button text-tertiary"
+                    class="text-primary font-medium underline md:text-[30px] xs:text-[25px] text-[15px]"
                   >
-                    Visit site
-                    <i class="ri-arrow-right-line articles__icon"></i>
+                    <i class="ri-global-line"></i>
                   </a>
                   <a
-                    href="#"
+                    href="https://github.com/jimjabid/jabid-portfolio-vite"
                     target="_blank"
-                    class="project__button text-tertiary"
+                    class="text-primary font-medium underline md:text-[30px] xs:text-[25px] text-[15px]"
                   >
-                    Visit figma
-                    <i class="ri-arrow-right-line articles__icon"></i>
+                    <i class="ri-file-code-line"></i>
                   </a>
                 </div>
               </div>
@@ -438,35 +467,37 @@
                 <h1
                   class="text-primary sm:text-[30px] text-center tracking-[1.5px]"
                 >
-                  Portfolio
+                  ShoeCommerce
                 </h1>
                 <p
-                  class="font-body md:text-[20.8px] text-center p-5 text-tertiary"
+                  class="font-body md:text-[18.8px] text-center p-5 text-tertiary"
                 >
-                  Design and Development
+                  Explore my ongoing e-commerce platform project on GitHub.
+                  Crafted with
+                  <span class="text-primary font-body font-bold">React</span>
+                  ,
+                  <span class="text-primary font-body font-bold"> Node.js</span>
+                  ,
+                  <span class="text-primary font-body font-bold">MongoDB </span>
+                  ,
+                  <span class="text-primary font-body font-bold"> Express</span>
+                  and
+                  <span class="text-primary font-body font-bold">
+                    Bootstrap</span
+                  >. this dynamic shopping experience is a work in progress.
                 </p>
-                <div class="flex flex-col justify-center items-center gap-5">
+                <div class="flex justify-center items-center gap-5">
                   <a
-                    href="#"
+                    href="https://github.com/jimjabid/shoe-commerce"
                     target="_blank"
-                    class="project__button text-tertiary"
+                    class="text-primary font-medium underline md:text-[30px] xs:text-[25px] text-[15px]"
                   >
-                    Visit site
-                    <i class="ri-arrow-right-line articles__icon"></i>
-                  </a>
-                  <a
-                    href="#"
-                    target="_blank"
-                    class="project__button text-tertiary"
-                  >
-                    Visit figma
-                    <i class="ri-arrow-right-line articles__icon"></i>
+                    <i class="ri-file-code-line"></i>
                   </a>
                 </div>
               </div>
               <img
-                src="https://picsum.photos/id/3/700
-                    "
+                src="/img/shoe-commerce.png"
                 alt="slider--image"
                 class="slider-img w-[200%] h-full bg-cover absolute inset-0 top-0 right-0 max-w-none"
               />
@@ -504,7 +535,7 @@
               <a
                 href="mailto:jabidandresjimenezserrano@gmail.com"
                 class="text-tertiary font-body sm:text-[30px] text-center tracking-[1.5px]"
-                >hello@jabidjim.com</a
+                >jabidandresjimenezserrano@gmail.com</a
               >
             </div>
           </div>
@@ -525,7 +556,7 @@
                 class="w-max flex h-max text-center px-[1rem] py-[0.25rem] bg-secondary shadow-contact rounded"
               >
                 <a
-                  href="#"
+                  href="https://github.com/jimjabid"
                   target="_blank"
                   class="text-tertiary font-body sm:text-[30px] text-center tracking-[1.5px]"
                   >GITHUB</a
@@ -535,7 +566,7 @@
                 class="w-max flex gap-y-20 h-max text-center px-[1rem] py-[0.25rem] bg-secondary shadow-contact rounded"
               >
                 <a
-                  href="#"
+                  href="https://www.linkedin.com/in/jabid-jimenez-serrano-960215175/"
                   target="_blank"
                   class="text-tertiary font-body sm:text-[30px] text-center tracking-[1.5px]"
                   >LINKEDIN</a
