deploy: 65cb41de4ce54d4520e28609fa977e09b724ab3f

--- a/index.html
+++ b/index.html
@@ -486,7 +486,8 @@
                   and
                   <span class="text-primary font-body font-bold">
                     Bootstrap</span
-                  >. this dynamic shopping experience is a work in progress.
+                  >. this dynamic shopping experience is a work in progress but
+                  you can check out the code on the link below.
                 </p>
                 <div class="flex justify-center items-center gap-5">
                   <a
