--- a/index.html
+++ b/index.html
@@ -158,24 +158,24 @@
         <div
           class="tech-container flex flex-row flex-wrap sm:justify-center lg:gap-10 justify-between"
         >
-          <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem] tech-ball" ></div>
 
-          <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem] tech-ball" ></div>
 
-          <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem] tech-ball" ></div>
 
-          <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem] tech-ball" ></div>
 
-          <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem] tech-ball" ></div>
 
-          <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem] tech-ball" ></div>
 
-          <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem] tech-ball" ></div>
 
-          <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem] tech-ball" ></div>
 
-          <div class="w-[15rem] h-[11rem]" id="tech"></div>
-          <div class="w-[15rem] h-[11rem]" id="tech"></div>
+          <div class="w-[15rem] h-[11rem] tech-ball" ></div>
+          <div class="w-[15rem] h-[11rem] tech-ball" ></div>
         </div>
       </div>
     </section>
