--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           </div>
         </div>
       </div>
-      <div class="tech-container-wrapper mt-20 sm:mt-32">
+      <!-- <div class="tech-container-wrapper mt-20 sm:mt-32">
         <div class="tech-container flex flex-row flex-wrap sm:justify-center lg:gap-10 justify-between">
           <div class="w-[15rem] h-[11rem] tech-ball" ></div>
 
@@ -177,7 +177,7 @@
           <div class="w-[15rem] h-[11rem] tech-ball" ></div>
           <div class="w-[15rem] h-[11rem] tech-ball" ></div>
         </div>
-      </div>
+      </div> -->
     </section>
     <section class="projects sm:px-20 lg:px-1 lg:py-16 xs:pt-[200px] xs:pb-[40px] py-16 max-w-7xl mx-auto relative z-0" id="projects">
       <div class="title-container project-title xs:w-[60%] lg:w-1/3 flex justify-end px-8 rounded-r-[20px] shadow-card bg-secondary absolute left-0 lg:-left-[10%]">
